--- a/thorn_ui/src/main/res/values/dimens.xml
+++ b/thorn_ui/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <resources>
-
+    <!--BottomNavigation的尺寸参数-->
     <dimen name="bottom_navigation_elevation">8dp</dimen>
 
     <dimen name="bottom_navigation_min_width">104dp</dimen>
